--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "requests (>=2.32.3,<3.0.0)",
     "pandas (>=2.2.3,<3.0.0)",
     "openpyxl (>=3.1.5,<4.0.0)",
-    "datetime (>=5.5,<6.0)"
+    "datetime (>=5.5,<6.0)",
+    "dotenv (>=0.9.9,<0.10.0)"
 ]
 
 
